--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.1",
+    "apollo-server-express": "^3.6.2",
     "graphql": "^16.6.0",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
